crates/css_ast/tests/snapshots/postcss_snapshots__postcss_raw_decl.snap
---
source: crates/css_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
---
{
  "type": "stylesheet",
  "rules": [
    {
      "type": "stylerule",
      "selectors": [
        {
          "components": [
            {
              "type": "tag",
              "value": {
                "Html": {
                  "A": {
                    "kind": "Ident",
                    "offset": 0,
                    "len": 1
                  }
                }
              }
            }
          ],
          "comma": null
        }
      ],
      "type": "style-declaration",
      "open": {
        "kind": "LeftCurly",
        "offset": 2,
        "len": 1
      },
      "declarations": [
        [
          {
            "type": "property",
            "name": {
              "kind": "Ident",
              "offset": 4,
              "len": 5
            },
            "colon": {
              "kind": "Colon",
              "offset": 9,
              "len": 1
            },
            "value": {
              "values": [
                {
                  "kind": "Whitespace",
                  "offset": 10,
                  "len": 1
                },
                {
                  "kind": "Ident",
                  "offset": 11,
                  "len": 1
                },
                {
                  "kind": "Whitespace",
                  "offset": 19,
                  "len": 1
                },
                {
                  "kind": "Ident",
                  "offset": 20,
                  "len": 1
                }
              ]
            },
            "important": null
          },
          {
            "kind": "Semicolon",
            "offset": 23,
            "len": 1
          }
        ]
      ],
      "rules": [],
      "close": {
        "kind": "RightCurly",
        "offset": 25,
        "len": 1
      }
    }
  ]
}
