crates/css_ast/tests/snapshots/postcss_snapshots__postcss_rule_at.snap
---
source: crates/css_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
snapshot_kind: text
---
{
  "type": "stylesheet",
  "rules": [
    {
      "type": "stylerule",
      "selectors": [
        [
          [
            {
              "type": "tag",
              "value": {
                "Html": {
                  "A": {
                    "kind": "Ident",
                    "offset": 0,
                    "len": 1
                  }
                }
              }
            }
          ],
          null
        ]
      ],
      "type": "style-declaration",
      "open": {
        "kind": "LeftCurly",
        "offset": 2,
        "len": 1
      },
      "declarations": [
        [
          {
            "type": "property",
            "name": {
              "kind": "Ident",
              "offset": 8,
              "len": 5
            },
            "colon": {
              "kind": "Colon",
              "offset": 13,
              "len": 1
            },
            "value": {
              "LengthPercentage": {
                "type": "px",
                "value": {
                  "kind": "Dimension",
                  "offset": 15,
                  "len": 4,
                  "unit": "px"
                }
              }
            },
            "important": null
          },
          {
            "kind": "Semicolon",
            "offset": 19,
            "len": 1
          }
        ],
        [
          {
            "type": "property",
            "name": {
              "kind": "Ident",
              "offset": 25,
              "len": 6
            },
            "colon": {
              "kind": "Colon",
              "offset": 31,
              "len": 1
            },
            "value": {
              "values": [
                {
                  "kind": "Whitespace",
                  "offset": 32,
                  "len": 1
                },
                {
                  "kind": "Number",
                  "offset": 33,
                  "len": 1
                },
                {
                  "kind": "Whitespace",
                  "offset": 34,
                  "len": 1
                },
                {
                  "kind": "AtKeyword",
                  "offset": 35,
                  "len": 6
                }
              ]
            },
            "important": null
          },
          {
            "kind": "Semicolon",
            "offset": 41,
            "len": 1
          }
        ]
      ],
      "rules": [
        {
          "type": "AtRule",
          "name": {
            "kind": "AtKeyword",
            "offset": 47,
            "len": 6
          },
          "prelude": {
            "values": [
              {
                "kind": "Whitespace",
                "offset": 53,
                "len": 1
              },
              {
                "kind": "Ident",
                "offset": 54,
                "len": 6
              }
            ]
          },
          "block": {
            "Block": {
              "type": "Block",
              "start": 60,
              "open_curly": {
                "kind": "LeftCurly",
                "offset": 61,
                "len": 1
              },
              "declarations": [
                [
                  {
                    "type": "Declaration",
                    "name": {
                      "kind": "Ident",
                      "offset": 71,
                      "len": 6
                    },
                    "colon": {
                      "kind": "Colon",
                      "offset": 77,
                      "len": 1
                    },
                    "value": {
                      "values": [
                        {
                          "kind": "Whitespace",
                          "offset": 78,
                          "len": 1
                        },
                        {
                          "kind": "Dimension",
                          "offset": 79,
                          "len": 5,
                          "unit": "px"
                        }
                      ]
                    },
                    "important": null
                  },
                  {
                    "kind": "Semicolon",
                    "offset": 84,
                    "len": 1
                  }
                ]
              ],
              "rules": [],
              "close_curly": {
                "kind": "RightCurly",
                "offset": 90,
                "len": 1
              }
            }
          }
        }
      ],
      "close": {
        "kind": "RightCurly",
        "offset": 92,
        "len": 1
      }
    }
  ]
}
