crates/css_ast/tests/snapshots/postcss_snapshots__postcss_tab.snap
---
source: crates/css_ast/tests/postcss_snapshots.rs
expression: result.output.unwrap()
snapshot_kind: text
---
{
  "type": "stylesheet",
  "rules": [
    {
      "type": "stylerule",
      "selectors": [
        [
          [
            {
              "type": "tag",
              "value": {
                "Html": {
                  "A": {
                    "kind": "Ident",
                    "offset": 0,
                    "len": 1
                  }
                }
              }
            }
          ],
          null
        ]
      ],
      "type": "style-declaration",
      "open": {
        "kind": "LeftCurly",
        "offset": 2,
        "len": 1
      },
      "declarations": [
        [
          {
            "type": "property",
            "name": {
              "kind": "Ident",
              "offset": 5,
              "len": 5
            },
            "colon": {
              "kind": "Colon",
              "offset": 10,
              "len": 1
            },
            "value": {
              "Named": {
                "Black": {
                  "kind": "Ident",
                  "offset": 12,
                  "len": 5
                }
              }
            },
            "important": null
          },
          null
        ]
      ],
      "rules": [],
      "close": {
        "kind": "RightCurly",
        "offset": 18,
        "len": 1
      }
    }
  ]
}
